app/private/styles/views/filter.less
.filtersearch.ui.selection.dropdown {
    min-width: 108%;
}
.dropdown-content{
    text-align:right;
    white-space: nowrap;
    padding: .5em 0;    
 }
.filter-text{
    text-align: left;
    vertical-align: middle;
    line-height: 2.1;
    white-space: nowrap;
}
.filter-button{
    white-space: nowrap;
}

.searchfilterinput.ui.search .prompt {
    border-radius: 0;
}
.searchinput{
	width:600px;
	@media only screen and (max-width: 1400px) { 
	  width:500px;
	}
	@media only screen and (max-width: 1097px) { 
	  width:405px;
	}
}

.searchicon.ui.icon.input input {
    padding-right: 6px!important; 
    border: 1px solid rgba(51, 51, 51,0.33);
    border-radius: 0 .28571429rem .28571429rem 0;
    padding-top:0.85em; 
}
.searchinput.ui.icon.input>i.circular.icon{
        top: 0.45em;
}
.searchicon.ui.icon.input i{
    cursor: pointer;
}
.ui.multiple.dropdown>.text{
    white-space: nowrap;
}
.filtercolumn.ui.grid>.column:not(.row){
    padding-left:1.7em;
}
.filtercolmntext.ui.grid>.column:not(.row){
    padding-left:1.39em;
}
.searchfilterbutton.ui.tiny.button{
    font-size:1em;
}

.searchdropdown.ui.basic.button{
        box-shadow: 0 0 0 1px rgba(51, 51, 51,.33) inset;
} 
.filter-sel-text {
     position: static; 
     padding: 0; 
     max-width: 100%; 
    margin: .45238095em 0 .45238095em .64285714em;
    line-height: 1.21428571em;
}

